Switch to fancy dashboard with Dirk's data

--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,13 @@
-Name: John Doe
-Role: Supply Chain Director
-General Responsibilities:
-  - Oversee end-to-end supply chain operations
-  - Monitor and optimize inventory levels across all facilities
-  - Lead vendor relationship management and negotiations
-  - Ensure compliance with regulatory standards
-  - Drive continuous improvement initiatives
-  - Manage cross-functional teams and stakeholder communications
-  - Develop and maintain supply chain KPIs and metrics
-  - Implement risk mitigation strategies
+general_responsibilities:
+  - title: Glass Damage Repair/Replacement Program
+    description: Oversee end-to-end glass damage repair and replacement processes including procurement, logistics, and inventory management
+    owner: Dirk Steele
+  - title: PM Records Management
+    description: Oversee onsite and local market PM Records Management to ensure compliance with regulatory standards
+    owner: Dirk Steele
+  - title: Lost Keys Replacement Program
+    description: Oversee lost keys replacement program including vendor relationships and service level agreements
+    owner: Dirk Steele
+  - title: Repair Order Closeout Processing
+    description: Manage repair order closeout processing to ensure timely completion and accurate documentation
+    owner: Dirk Steele
