Create separate charts for each metric with custom Y-axis ranges

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 general_responsibilities:
   - title: Glass Damage Repair/Replacement Program
-    description: Oversee end-to-end glass damage repair and replacement processes including procurement, logistics, and inventory management
+    description: Review all glass damage and determine appropriate repair or replacement actions.
     owner: Dirk Steele
   - title: PM Records Management
     description: Oversee onsite and local market PM Records Management to ensure compliance with regulatory standards
