Change titles to Dirk Steele Dashboard and add Supply Management responsibility
- Update page title and header from Supply Chain Management to Dirk Steele Dashboard
- Add new responsibility: Supply Management - Monitor and Report on Airport Oil Levels

--- a/config.yaml
+++ b/config.yaml
@@ -11,3 +11,6 @@ general_responsibilities:
   - title: Repair Order Closeout Processing
     description: Manage repair order closeout processing to ensure timely completion and accurate documentation
     owner: Dirk Steele
+  - title: Supply Management
+    description: Monitor and Report on Airport Oil Levels
+    owner: Dirk Steele
